--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
         integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/styles-test.css">
 </head>
 
 <body>
@@ -33,7 +33,7 @@
                         <a href="mailto:info@devstudio.com" class="contacts-link">info@devstudio.com</a>
                     </li>
                     <li class="item">
-                        <a href="tel:+11(000)111-11-11" class="contacts-link">+11(000)111-11-11</a>
+                        <a href="tel:+11(000)111-11-11" class="contacts-link contacts-link-phone">+11(000)111-11-11</a>
                     </li>
                 </ul>
             </address>
@@ -335,7 +335,7 @@
             </div>
         </section>
     </main>
-    <footer class="about">
+    <footer class="about section">
         <div class="container footer-decoration">
             <div>
                 <a href="./index.html" class="logo">web<span class="logo-studio-footer">studio</span>
@@ -379,18 +379,19 @@
                 </ul>
             </div>
             <div class="subscribe">
-                <p class="social">Subscribe</p>
-                <form class="footer-form" action="#">
-                    <input type="email" class="footer-email" placeholder="E-mail" name="user_email" required>
+                <div>
+                    <p class="social">Subscribe</p>
+                    <form class="footer-form" action="#">
+                        <input type="email" class="footer-email" placeholder="E-mail" name="user_email" required>
+                </div>
+                <div>
                     <button type="submit" class="footer-btn">Subscribe
                         <svg class="subscribe-telegram" width="24px" height="24px">
                             <use href="./images/split.svg#icon-telegram"></use>
                         </svg>
                     </button>
-
-
+                </div>
                 </form>
-
             </div>
         </div>
     </footer>
@@ -451,6 +452,7 @@
         </div>
     </div>
     <script src="./js/modal.js"></script>
+    <script src="./js/mobile-menu.js"></script>
 </body>
 
 </html>
