Добавление фото, работа с модальным окном и адаптацией

--- a/index.html
+++ b/index.html
@@ -107,13 +107,22 @@
                 <h2 class="works-title">What are we doing</h2>
                 <ul class="works-list list">
                     <li class="item">
-                        <img src="./images/our-works-1.jpg" width="360" height="300" alt="This is our works">
+                        <picture>
+                            <source srcset="./images/our-works-1.jpg 1x, ./images/our-works-1@2x.jpg 2x">
+                            <img src="./images/our-works-1.jpg" alt="This is our works">
+                        </picture>
                     </li>
                     <li class="item">
-                        <img src="./images/our-works-2.jpg" width="360" height="300" alt="This is our works">
+                        <picture>
+                            <source srcset="./images/our-works-2.jpg 1x, ./images/our-works-2@2x.jpg 2x">
+                            <img src="./images/our-works-2.jpg" alt="This is our works">
+                        </picture>
                     </li>
                     <li class="item">
-                        <img src="./images/our-works-3.jpg" width="360" height="300" alt="This is our works">
+                        <picture>
+                            <source srcset="./images/our-works-3.jpg 1x, ./images/our-works-3@2x.jpg 2x">
+                            <img src="./images/our-works-3.jpg" alt="This is our works">
+                        </picture>
                     </li>
                 </ul>
             </div>
@@ -123,8 +132,10 @@
                 <h2 class="team-title">Our Team</h2>
                 <ul class="team-list list">
                     <li class="item">
-                        <img src="./images/our-team-product-designer.jpg" width="264" height="260"
-                            alt="Product Designer out team">
+                        <picture>
+                            <source srcset="./images/team-produkt.jpg 1x, ./images/team-produkt@2x.jpg 2x">
+                            <img src="./images/team-produkt.jpg" alt="Product designer our team">
+                        </picture>
                         <div class="team-decoration">
                             <h3 class="team-list-title">Mark Guerrero</h3>
                             <p class="team-list-text">Product Designer</p>
@@ -162,8 +173,10 @@
                         </div>
                     </li>
                     <li class="item">
-                        <img src="./images/our-team-front-developer.jpg" width="264" height="260"
-                            alt="Frontend Developer out team">
+                        <picture>
+                            <source srcset="./images/team-frontend.jpg 1x, ./images/team-frontend@2x.jpg 2x">
+                            <img src="./images/team-frontend.jpg" alt="Frontend developer our team">
+                        </picture>
                         <div class="team-decoration">
                             <h3 class="team-list-title">Tom Ford</h3>
                             <p class="team-list-text">Frontend Developer</p>
@@ -201,7 +214,10 @@
                         </div>
                     </li>
                     <li class="item">
-                        <img src="./images/our-team-marketing.jpg" width="264" height="260" alt="Marketing out team">
+                        <picture>
+                            <source srcset="./images/team-marketing.jpg 1x, ./images/team-marketing@2x.jpg 2x">
+                            <img src="./images/team-marketin.jpg" alt="Marketing our team">
+                        </picture>
                         <div class="team-decoration">
                             <h3 class="team-list-title">Camila Garcia</h3>
                             <p class="team-list-text">Marketing</p>
@@ -239,7 +255,10 @@
                         </div>
                     </li>
                     <li class="item">
-                        <img src="./images/our-team-designer.jpg" width="264" height="260" alt="UI Designer out team">
+                        <picture>
+                            <source srcset="./images/team-designer.jpg 1x, ./images/team-designer@2x.jpg 2x">
+                            <img src="./images/team-designer.jpg" alt="UI Designer out team">
+                        </picture>
                         <div class="team-decoration">
                             <h3 class="team-list-title">Daniel Wilson</h3>
                             <p class="team-list-text">UI Designer</p>
@@ -337,7 +356,7 @@
     </main>
     <footer class="about section">
         <div class="container footer-decoration">
-            <div>
+            <div class="logo-footer-position">
                 <a href="./index.html" class="logo">web<span class="logo-studio-footer">studio</span>
                 </a>
                 <p class="about-text">
