--- a/index.html
+++ b/index.html
@@ -19,8 +19,16 @@
     <header class="page-header">
         <div class="menu-nav container">
             <nav class="navigation">
-                <a href="./index.html" class="logo"> web<span class="logo-studio">studio</span>
-                </a>
+                <div class="mobile-header">
+                    <a href="./index.html" class="logo"> web<span class="logo-studio">studio</span>
+                    </a>
+                    <button type="button" class="mobile-menu-btn js-open-menu" aria-expanded="false"
+                        aria-controls="mobile-menu">
+                        <svg width="32px" height="22px">
+                            <use class="mobile-open" href="./images/split.svg#burger-icon"></use>
+                        </svg>
+                    </button>
+                </div>
                 <ul class="navigation-list list">
                     <li class="item"><a href="./index.html" class="navigation-link active">Studio</a></li>
                     <li class="item"><a href="./portfolio.html" class="navigation-link">Portfolio</a></li>
@@ -134,7 +142,7 @@
                     <li class="item">
                         <picture>
                             <source srcset="./images/team-produkt.jpg 1x, ./images/team-produkt@2x.jpg 2x">
-                            <img src="./images/team-produkt.jpg" alt="Product designer our team">
+                            <img src="./images/team-produkt.jpg" alt="Product designer our team" class="team-foto">
                         </picture>
                         <div class="team-decoration">
                             <h3 class="team-list-title">Mark Guerrero</h3>
@@ -175,7 +183,7 @@
                     <li class="item">
                         <picture>
                             <source srcset="./images/team-frontend.jpg 1x, ./images/team-frontend@2x.jpg 2x">
-                            <img src="./images/team-frontend.jpg" alt="Frontend developer our team">
+                            <img src="./images/team-frontend.jpg" alt="Frontend developer our team" class="team-foto">
                         </picture>
                         <div class="team-decoration">
                             <h3 class="team-list-title">Tom Ford</h3>
@@ -216,7 +224,7 @@
                     <li class="item">
                         <picture>
                             <source srcset="./images/team-marketing.jpg 1x, ./images/team-marketing@2x.jpg 2x">
-                            <img src="./images/team-marketin.jpg" alt="Marketing our team">
+                            <img src="./images/team-marketin.jpg" alt="Marketing our team" class="team-foto">
                         </picture>
                         <div class="team-decoration">
                             <h3 class="team-list-title">Camila Garcia</h3>
@@ -257,7 +265,7 @@
                     <li class="item">
                         <picture>
                             <source srcset="./images/team-designer.jpg 1x, ./images/team-designer@2x.jpg 2x">
-                            <img src="./images/team-designer.jpg" alt="UI Designer out team">
+                            <img src="./images/team-designer.jpg" alt="UI Designer out team" class="team-foto">
                         </picture>
                         <div class="team-decoration">
                             <h3 class="team-list-title">Daniel Wilson</h3>
@@ -417,7 +425,7 @@
 
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
-            <button class="btn" data-modal-close>
+            <button type="button" class="btn" data-modal-close>
                 <svg width="8px" height="8px">
                     <use href="./images/split.svg#icon-close"></use>
                 </svg>
@@ -470,8 +478,69 @@
             </Form>
         </div>
     </div>
+    <!-- Меню для мобильного -->
+    <div class="menu-container js-menu-container" id="mobile-menu">
+        <button class="menu-toggle js-close-menu">
+            <svg fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
+                <path fill-rule="evenodd"
+                    d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+                    clip-rule="evenodd"></path>
+            </svg>
+        </button>
+
+        <ul class="mobile-menu">
+            <li><a href="" class="link">About</a></li>
+            <li><a href="" class="link">Products</a></li>
+            <li><a href="" class="link">Contacts</a></li>
+            <li><a href="" class="link">Career</a></li>
+        </ul>
+
+        <ul class="mobile-contacts">
+            <li><a href="tel:+11(000)111-11-11" class="contcts-link">+11 (000) 111-11-11</a></li>
+
+            <li><a href="mailto:info@devstudio.com" class="contcts-link">info@devstudio.com</a></li>
+        </ul>
+
+        <ul class="mobile-social">
+            <li>
+                <a href="" class="social-link-mobile">
+                    <svg class="icon-mobile-social">
+                        <use></use>
+                    </svg>
+                </a>
+            </li>
+            <li>
+                <a href="" class="social-link-mobile">
+                    <svg class="icon-mobile-social">
+                        <use></use>
+                    </svg>
+                </a>
+            </li>
+            <li>
+                <a href="" class="social-link-mobile">
+                    <svg class="icon-mobile-social">
+                        <use></use>
+                    </svg>
+                </a>
+            </li>
+            <li>
+                <a href="" class="social-link-mobile">
+                    <svg class="icon-mobile-social">
+                        <use></use>
+                    </svg>
+                </a>
+            </li>
+        </ul>
+    </div>
+
+
+
+
     <script src="./js/modal.js"></script>
-    <script src="./js/mobile-menu.js"></script>
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+        integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+        crossorigin="anonymous"></script>
+    <script defer src="./js/mobile-menu.js"></script>
 </body>
 
 </html>
