Стили мобильного меню+работа с графикой и ретина графикой

--- a/index.html
+++ b/index.html
@@ -488,45 +488,46 @@
             </svg>
         </button>
 
-        <ul class="mobile-menu">
-            <li><a href="" class="link">About</a></li>
-            <li><a href="" class="link">Products</a></li>
-            <li><a href="" class="link">Contacts</a></li>
-            <li><a href="" class="link">Career</a></li>
+        <ul class="mobile-menu list">
+            <li class="item"><a href="" class="mobile-menu-link">Studio</a>
+            </li>
+            <li class="item"><a href="" class="mobile-menu-link">Portfolio</a>
+            </li>
+            <li class="item"><a href="" class="mobile-menu-link active-mobile">Contacts</a>
+            </li>
         </ul>
 
-        <ul class="mobile-contacts">
-            <li><a href="tel:+11(000)111-11-11" class="contcts-link">+11 (000) 111-11-11</a></li>
-
-            <li><a href="mailto:info@devstudio.com" class="contcts-link">info@devstudio.com</a></li>
+        <ul class="mobile-contacts list">
+            <li class="item"><a href="tel:+11(000)111-11-11" class="contcts-phone">+11 (000) 111-11-11</a></li>
+            <li class="item"><a href="mailto:info@devstudio.com" class="contcts-email">info@devstudio.com</a></li>
         </ul>
 
-        <ul class="mobile-social">
-            <li>
-                <a href="" class="social-link-mobile">
-                    <svg class="icon-mobile-social">
-                        <use></use>
+        <ul class="mobile-footer list">
+            <li class="item">
+                <a class="mobile-link-footer" href="">
+                    <svg class="icon-massendger-footer">
+                        <use href="./images/split.svg#icon-instagram"></use>
                     </svg>
                 </a>
             </li>
-            <li>
-                <a href="" class="social-link-mobile">
-                    <svg class="icon-mobile-social">
-                        <use></use>
+            <li class="item">
+                <a class="mobile-link-footer" href="">
+                    <svg class="icon-massendger-footer">
+                        <use href="./images/split.svg#icon-twitter"></use>
                     </svg>
                 </a>
             </li>
-            <li>
-                <a href="" class="social-link-mobile">
-                    <svg class="icon-mobile-social">
-                        <use></use>
+            <li class="item">
+                <a class="mobile-link-footer" href="">
+                    <svg class="icon-massendger-footer">
+                        <use href="./images/split.svg#icon-facebook"></use>
                     </svg>
                 </a>
             </li>
-            <li>
-                <a href="" class="social-link-mobile">
-                    <svg class="icon-mobile-social">
-                        <use></use>
+            <li class="item">
+                <a class="mobile-link-footer" href="">
+                    <svg class="icon-massendger-footer">
+                        <use href="./images/split.svg#icon-linkedin"></use>
                     </svg>
                 </a>
             </li>
