Доработка после замечаний

--- a/index.html
+++ b/index.html
@@ -48,12 +48,10 @@
         </div>
     </header>
     <main>
-        <section class="hero section section-no-padding">
-            <div class="overlya">
-                <div class="container">
-                    <h1 class="hero-title">Effective Solutions for Your Business</h1>
-                    <button data-modal-open type="button" class="hero-button">Order Service</button>
-                </div>
+        <section class="hero">
+            <div class="container">
+                <h1 class="hero-title">Effective Solutions for Your Business</h1>
+                <button data-modal-open type="button" class="hero-button">Order Service</button>
             </div>
         </section>
         <section class="slogan section section-no-padding">
@@ -110,7 +108,7 @@
                 </ul>
             </div>
         </section>
-        <section class="works section section-no-padding">
+        <section class="works section">
             <div class="container">
                 <h2 class="works-title">What are we doing</h2>
                 <ul class="works-list list">
@@ -406,18 +404,16 @@
                 </ul>
             </div>
             <div class="subscribe">
-                <div>
-                    <p class="social">Subscribe</p>
-                    <form class="footer-form" action="#">
-                        <input type="email" class="footer-email" placeholder="E-mail" name="user_email" required>
-                </div>
-                <div>
+                <p class="social">Subscribe</p>
+                <form class="footer-form" action="#">
+
+                    <input type="email" class="footer-email" placeholder="E-mail" name="user_email" required>
                     <button type="submit" class="footer-btn">Subscribe
                         <svg class="subscribe-telegram" width="24px" height="24px">
                             <use href="./images/split.svg#icon-telegram"></use>
                         </svg>
                     </button>
-                </div>
+
                 </form>
             </div>
         </div>
