--- a/index.html
+++ b/index.html
@@ -467,7 +467,10 @@
                             </use>
                         </svg>
                     </span>
-                    I accept the terms and conditions of the<span>Privacy Policy</span></label>
+                    <div class="test">
+                        <p>I accept the terms and conditions of the</p><span>Privacy Policy</span>
+                    </div>
+                </label>
 
                 <button class="modal-btn" type="submit">Send</button>
 
