Доработка мобильного меню под 320рх

--- a/index.html
+++ b/index.html
@@ -467,9 +467,10 @@
                             </use>
                         </svg>
                     </span>
-                    <div class="test">
-                        <p>I accept the terms and conditions of the</p><span>Privacy Policy</span>
-                    </div>
+                    <span class="foter-mobile-accept">
+                        <span>I accept the terms and conditions of the</span><span class="color-privacy">Privacy
+                            Policy</span>
+                    </span>
                 </label>
 
                 <button class="modal-btn" type="submit">Send</button>
